# CT_GUI_Docker

./: Dockerfile  README.md  RECONSTRUCTION_GUIDE.md  dataset.py  docker-entrypoint.sh  generate_sinogram.py  metadata.json  metadata_v2.json  odl_stream_server.py  odl_utils.py  odl_utils_v2.py  odl_utils_v3.py  odl_utils_v4.py  odl_utils_working.py  reconstruct_full_helical_v1.py  reconstruction.py  reconstruction_methods.json  reconstruction_v2.py  reconstruction_v3.py  reconstruction_v4.py  reconstruction_v5.py  reconstruction_working.py  sample_config.json  sample_config_real.json  slicer_backend_config.json  trajectory_debug_v1.py
3Dslicer/: README.md
3Dslicer/CT-Wood/CTWood/: CMakeLists.txt
3Dslicer/CT-Wood/CTWood/LoadCTData/: CMakeLists.txt  LoadCTData.py
3Dslicer/CT-Wood/CTWood/LoadCTData/Resources/UI/: LoadCTData.ui
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/: CMakeLists.txt  README.md  SinoReconsVisual2.py
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/Resources/: sinoReconsVisual.qrc  sinoReconsVisual.rcc
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/Resources/Icons/: LayoutSinogram.af  SinoReconsVisual2_v2.af
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/Resources/Icons/dark/: index.theme
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/Resources/Icons/light/: index.theme
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/Resources/UI/: SinoReconsVisual2.ui  SinoReconsVisual2SettingsPanel.ui
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/Resources/UI/ReconstructionMethods/: fbp.ui  landweber.ui
3Dslicer/CT-Wood/CTWood/SinoReconsVisual2/settings/: SinoReconsVisual2SettingsPanel.py
Documentation/: DATA_GUIDE.md  RECONSTRUCTION_GUIDE.md  SETUP.md  metadata.json
Documentation/schemas/: metadata.schema.json  samples.schema.json
